examples/test/testpolicy5708.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5708
  namespace: namespace45
spec:
  podSelector:
    matchLabels:
      key39: value0
      key31: value29
      key13: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value14
          key9: value37
          key34: value32
      podSelector:
        matchLabels:
          key6: value9
          key15: value15
